Added a few text changes

--- a/style.css
+++ b/style.css
@@ -99,6 +99,7 @@ nav ul li a:hover::after{
 
 .sub-title{
     font-size: 60px;
+    text-align: center;
     font-weight: 600;
     color: #fff;
 }
