--- a/style.css
+++ b/style.css
@@ -80,6 +80,10 @@ nav ul li a:hover::after{
     color: #ababab;
 }
 
+.aboutP{
+    text-align:center;
+}
+
 .row{
     display: flex;
     justify-content: space-between;
@@ -389,7 +393,24 @@ nav ul .fa-solid{
 }
 .sub-title{
     font-size: 40px;
+    text-align: left;
 }
+
+.break1{
+    white-space: pre;
+}
+
+.aboutP{
+    text-align: left;
+    font-size: 10px;
+}
+
+
+
+.about-col-1{
+text-align: left;
+}
+
 .about-col-1, .about-col-2{
     flex-basis: 100%;
 }
@@ -400,7 +421,7 @@ nav ul .fa-solid{
     font-size: 14px;
 }
 .tab-links{
-    font-size: 16px;
+    font-size: 10px;
     margin-right: 20px;
 }
 .contact-left, .contact-right{
